[package]
name = "thanes_egui_utils"
version = "0.28.1"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
egui_extras = { version = "0.28.1" }
indexmap = "2.7.1"
rfd = "0.15.2"
